--------------------
   - NSH implementation now conforms to latest draft (draft-ietf-sfc-nsh-28).
   - OVSDB:
     * New high-level documentation in ovsdb(7).
     * New file format documentation for developers in ovsdb(5).
     * Protocol documentation moved from ovsdb-server(1) to ovsdb-server(7).
     * ovsdb-client: New "get-schema-cksum" command.
     * ovsdb-client: New "backup" command.
   - OVN:
     * The "requested-chassis" option for a logical switch port now accepts a
       chassis "hostname" in addition to a chassis "name".
     * IPv6
       - Added support to send IPv6 Router Advertisement packets in response to
         the IPv6 Router Solicitation packets from  the VIF ports.
       - Added support to generate Neighbor Solicitation packets using the OVN
         action 'nd_ns' to resolve unknown next hop MAC addresses for the
         IPv6 packets.
     * ovn-ctl: New commands run_nb_ovsdb and run_sb_ovsdb.
   - Linux kernel 4.13
     * Add support for compiling OVS with the latest Linux 4.13 kernel
   - "flush-conntrack" in ovs-dpctl and ovs-appctl now accept a 5-tuple to
     delete a specific connection tracking entry.
   - DPDK:
     * Add support for DPDK v17.11
     * Add support for vHost IOMMU

v2.8.0 - 31 Aug 2017
--------------------
   - ovs-ofctl:
     * ovs-ofctl can now accept and display port names in place of numbers.  By
       default it always accepts names and in interactive use it displays them;
       use --names or --no-names to override.  See ovs-ofctl(8) for details.
     * "ovs-ofctl dump-flows" now accepts --no-stats to omit flow statistics.
   - New ovs-dpctl command "ct-stats-show" to show connection tracking stats.
   - Tunnels:
     * Added support to set packet mark for tunnel endpoint using
       `egress_pkt_mark` OVSDB option.
     * When using Linux kernel datapath tunnels may be created using rtnetlink.
       This will allow us to take advantage of new tunnel features without